<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">О приложении</string>
    <string name="add_release_to_my_collection">Добавить к себе в коллекцию</string>
    <string name="add_shortcut">На главный экран</string>
    <string name="add_to_block_list">Заблокировать</string>
    <string name="add_to_block_list_confirm">Вы действительно хотите заблокировать пользователя?\n\nПользователю больше не будет доступна общедоступная информация на Вашей странице, он больше не сможет отвечать на Ваши комментарии, а также, если вы были друг у друга в друзьях, то дружба разорвется.</string>
    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="add_video_to_favorite">Добавить к себе</string>
    <string name="adult_desc">Для просмотра подтвердите, что Вам уже исполнилось 18 лет</string>
    <string name="adult_title">Возрастное ограничение</string>
    <string name="age_rating_confirm_info">При нажатии на кнопку «Подтвердить» данное сообщение больше показываться не будет.</string>
    <string name="age_rating_info">Значение возрастного ограничения взято из открытых источников в сети Интернет. Администрация приложения не несет ответственности за достоверность информации.\n\nПереведено из системы рейтингов Американской киноассоциации (MPPA) — принятая в США система оценки содержания фильма, введённая Американской киноассоциацией.\n\n0+ → G\n6+ → PG\n16+ → PG-13\n18+ → R и NC-17</string>
    <string name="allow">Разрешить</string>
    <string name="also_recommended">Рекомендуем также</string>
    <string name="alternative_connection">Альтернативное соединение</string>
    <string name="alternative_connection_disable_text">Альтернативное соединение будет отключено.\n\nПриложение будет перезапущено, вы уверены?</string>
    <string name="alternative_connection_enable_text">Приложение подключится к серверу по новому адресу и попробует обойти блокировку интернет-провайдерами. Используйте эту функцию если доступ к приложению из Вашей страны ограничивается.\n\nПриложение будет перезапущено, вы уверены?</string>
    <string name="alternative_connection_summary">Активируйте только если испытываете проблемы с работой приложения, связанные с блокировками в Вашей стране</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animation">Анимация</string>
    <string name="app_name">Anixart</string>
    <string name="app_updated">Приложение обновлено</string>
    <string name="app_updated_desc">Установлена новейшая версия приложения. Обновление не требуется.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appeal">Отправить заявку</string>
    <string name="apply">Применить</string>
    <string name="attention">Внимание</string>
    <string name="auth_google_already_bound">Этот аккаунт Google уже привязан к другой учётной записи</string>
    <string name="auth_google_login_failed">Не удалось авторизоваться через Google</string>
    <string name="auth_google_not_bound">К этой учётной записи не привязан аккаунт Google</string>
    <string name="auth_resend_code">Отправить код повторно</string>
    <string name="auth_verify_hint">На Ваш Email было отправлено письмо с кодом подтверждения. Пожалуйста, введите его в поле ниже.</string>
    <string name="auth_vk_already_bound">Этот аккаунт ВКонтакте уже привязан к другой учётной записи</string>
    <string name="auth_vk_login_failed">Не удалось авторизоваться через ВКонтакте</string>
    <string name="auth_vk_not_bound">К этой учётной записи не привязан аккаунт ВКонтакте</string>
    <string name="author_is">&lt;b&gt;Автор:&lt;/b&gt; %s</string>
    <string name="avatar_changed">Изображение профиля успешно установлено</string>
    <string name="back">Назад</string>
    <string name="beta_features">Бета возможности</string>
    <string name="beta_features_summary">Опция для тестировщиков, не стоит включать без необходимости</string>
    <string name="bookmarks">Закладки</string>
    <string name="bookmarks_count">%s ВСЕГО</string>
    <string name="bookmarks_default_page">Вкладка в закладках по умолчанию</string>
    <string name="bookmarks_export">Экспорт закладок</string>
    <string name="bookmarks_export_summary">Выгрузить закладки из приложения отдельным файлом на свое устройство</string>
    <string name="bookmarks_import">Импорт закладок</string>
    <string name="bookmarks_import_failed">Невозможно произвести импортирование закладок, попробуй позже.</string>
    <string name="bookmarks_import_limit_reached">Переносить закладки можно лишь раз в месяц.</string>
    <string name="bookmarks_import_success">Закладки успешно импортированы.</string>
    <string name="bookmarks_import_summary">Загрузить закладки в приложение со сторонних ресурсов</string>
    <string name="bottom_navigation_compact">Компактный вид меню</string>
    <string name="bottom_navigation_compact_summary">Уменьшить размер основного меню и увеличить пространство для контента</string>
    <string name="change_email">Изменить Email</string>
    <string name="change_email_summary">Изменить Email учетной записи</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_password_summary">Изменить пароль учетной записи</string>
    <string name="downloader_method">Способ загрузки видео</string>
    <string name="home_default_page">Вкладка на главной по умолчанию</string>
    <string name="kodik_video_quality">Качество видео Kodik</string>
    <string name="logout">Выйти из учетной записи</string>
    <string name="notification_from_related_releases">Уведомления о новых релизах</string>
    <string name="notification_from_report_process">Уведомления о жалобах</string>
    <string name="notifications_receive_comments">Уведомления об ответах</string>
    <string name="notifications_receive_comments_summary">Если кто-то отвечает на Ваши комментарии</string>
    <string name="notifications_receive_episodes">Получать уведомления</string>
    <string name="notifications_receive_episodes_summary">О выходе новых серий</string>
    <string name="notifications_receive_first_episode">Получать только одно уведомление</string>
    <string name="notifications_receive_first_episode_summary">Только от одной из выбранных озвучек, новая серия от которой выйдет первее</string>
    <string name="notifications_receive_from_lists">Уведомления из списков</string>
    <string name="notifications_receive_from_releases">Настроить уведомления по отдельным релизам</string>
    <string name="notifications_receive_from_types">Уведомления от озвучек</string>
    <string name="notifications_receive_my_collection_comments">Уведомления о комментариях своих коллекций</string>
    <string name="notifications_receive_my_collection_comments_summary">Если кто-то комментирует Ваши коллекции</string>
    <string name="notifications_receive_push">Получать Push-уведомления</string>
    <string name="notifications_receive_related_release_summary">Если в приложении был добавлен связанный релиз, который находится у вас в закладках</string>
    <string name="notifications_receive_report_process_summary">Если отправленная вами жалоба была обработана модератором</string>
    <string name="player">Видеоплеер</string>
    <string name="player_always_ask">Спрашивать всегда</string>
    <string name="preference_privacy_counts">Кто видит в профиле мои комментарии, коллекции, видео и друзей</string>
    <string name="preference_privacy_friend_requests">Кто может отправлять мне заявки в друзья</string>
    <string name="preference_privacy_social">Кто видит мои социальные сети</string>
    <string name="preference_privacy_stats">Кто видит мою статистику, оценки и историю просмотра</string>
    <string name="privacy">Приватность</string>
    <string name="profile_status">Изменить статус</string>
    <string name="profile_status_summary">Не установлен</string>
    <string name="profile_watched_time_format">Формат времени просмотра в профиле</string>
    <string name="quality_default">Стандартное</string>
    <string name="quality_high">720p</string>
    <string name="quality_low">360p</string>
    <string name="quality_medium">480p</string>
    <string name="quality_ultra_high">1080p</string>
    <string name="remember_third_party_platform">Непроверенные источники</string>
    <string name="remember_third_party_platform_summary">По умолчанию переходить к вариантам из непроверенных источников</string>
    <string name="remember_type_source">Запоминать вариант и источник</string>
    <string name="remember_type_source_summary">Автоматический переход к варианту и источнику из которого вы последний раз смотрели серию</string>
    <string name="security">Безопасность</string>
    <string name="selected_player_rewind_time">Время перемотки опенингов во встроенном плеере</string>
    <string name="sort_profile_list_asc">По добавл.</string>
    <string name="sort_profile_list_desc">По добавл.</string>
    <string name="sort_release_asc">По году</string>
    <string name="sort_release_desc">По году</string>
    <string name="sort_title_asc">От Я до А</string>
    <string name="sort_title_desc">От А до Я</string>
    <string name="sort_vote_asc">Сначала старые</string>
    <string name="sort_vote_desc">Сначала последние</string>
    <string name="sort_vote_five_star">5 звёзд</string>
    <string name="sort_vote_four_star">4 звезды</string>
    <string name="sort_vote_one_star">1 звезда</string>
    <string name="sort_vote_three_star">3 звезды</string>
    <string name="sort_vote_two_star">2 звезды</string>
    <string name="sources_category">Источники видео</string>
    <string name="text_continue">Продолжить</string>
    <string name="title_choose_quality">Выберите качество</string>
    <string name="upload_avatar">Изменить фото профиля</string>
    <string name="upload_avatar_summary">Загрузить с устройства</string>
    <string name="video_quality_priority">Приоритет качества во встроенном плеере</string>
    <string name="video_quality_third_party_priority">Приоритет качества в стороннем плеере</string>
    <string name="view_type">Вид отображения релизов</string>
</resources>