<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="Уведомления о сериях"
        android:key="episodes"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:title="@string/notifications_receive_episodes"
            android:key="is_episode_notifications_enabled"
            android:summary="@string/notifications_receive_episodes_summary"
            android:widgetLayout="@layout/preference_switch"
            app:iconSpaceReserved="false"/>
        <com.swiftsoft.anixartd.p015ui.fragment.main.preference.layout.ProfileMainNotificationPreferenceLayout
            android:layout="@layout/preference_notification_status"
            android:key="profile_main_notification_preferences"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"/>
        <Preference
            android:title="@string/notifications_receive_from_lists"
            android:key="profile_status_notification_preferences"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"/>
        <Preference
            android:title="@string/notifications_receive_from_types"
            android:key="profile_type_notification_preferences"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"/>
        <Preference
            android:title="@string/notifications_receive_from_releases"
            android:key="profile_release_type_notification_preferences"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"/>
        <SwitchPreference
            android:title="@string/notifications_receive_first_episode"
            android:key="is_first_episode_notification_enabled"
            android:summary="@string/notifications_receive_first_episode_summary"
            android:widgetLayout="@layout/preference_switch"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/notification_from_related_releases"
        android:key="related"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:title="@string/notifications_receive_episodes"
            android:key="is_related_release_notifications_enabled"
            android:summary="@string/notifications_receive_related_release_summary"
            android:widgetLayout="@layout/preference_switch"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Уведомления о комментариях"
        android:key="comments"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:title="@string/notifications_receive_comments"
            android:key="is_comment_notifications_enabled"
            android:summary="@string/notifications_receive_comments_summary"
            android:widgetLayout="@layout/preference_switch"
            app:iconSpaceReserved="false"/>
        <SwitchPreference
            android:title="@string/notifications_receive_my_collection_comments"
            android:key="is_my_collection_comment_notifications_enabled"
            android:summary="@string/notifications_receive_my_collection_comments_summary"
            android:widgetLayout="@layout/preference_switch"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/notification_from_report_process"
        android:key="reports"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:title="@string/notifications_receive_push"
            android:key="is_report_process_notifications_enabled"
            android:summary="@string/notifications_receive_report_process_summary"
            android:widgetLayout="@layout/preference_switch"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>
