<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:layout="@layout/preference_space"
        android:selectable="false"/>
    <Preference
        android:title="Отправить донат"
        android:key="donation"
        app:iconSpaceReserved="false"/>
    <Preference
        android:layout="@layout/preference_separator"
        android:selectable="false"
        android:key="donation_separator"/>
    <PreferenceCategory
        android:title="Профиль"
        android:key="profile"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <Preference
            android:title="@string/logout"
            android:key="logout"
            app:iconSpaceReserved="false"/>
        <Preference
            android:title="@string/upload_avatar"
            android:key="avatar"
            android:summary="@string/upload_avatar_summary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:title="@string/profile_status"
            android:key="status"
            android:summary="@string/profile_status_summary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:title="Изменить никнейм"
            android:key="change_login"
            app:iconSpaceReserved="false"/>
        <Preference
            android:title="Мои социальные сети"
            android:key="social_pages"
            android:summary="Укажите ссылки на свои страницы в соц. сетях"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/preference_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:title="@string/security"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <Preference
            android:title="@string/change_email"
            android:key="change_email"
            android:summary="@string/change_email_summary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:title="@string/change_password"
            android:key="change_password"
            android:summary="@string/change_password_summary"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/preference_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:title="@string/privacy"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <ListPreference
            android:entries="@array/privacy_values"
            android:title="@string/preference_privacy_stats"
            android:key="privacy_stats"
            android:defaultValue="0"
            android:dialogTitle="@string/preference_privacy_stats"
            android:entryValues="@array/entry_privacy_values"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            android:entries="@array/privacy_values"
            android:title="@string/preference_privacy_counts"
            android:key="privacy_counts"
            android:defaultValue="0"
            android:dialogTitle="@string/preference_privacy_counts"
            android:entryValues="@array/entry_privacy_values"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            android:entries="@array/privacy_values"
            android:title="@string/preference_privacy_social"
            android:key="privacy_social"
            android:defaultValue="0"
            android:dialogTitle="@string/preference_privacy_social"
            android:entryValues="@array/entry_privacy_values"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            android:entries="@array/privacy_friend_requests_values"
            android:title="@string/preference_privacy_friend_requests"
            android:key="privacy_friend_requests"
            android:defaultValue="0"
            android:dialogTitle="@string/preference_privacy_friend_requests"
            android:entryValues="@array/entry_privacy_friend_requests_values"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            app:useSimpleSummaryProvider="true"/>
        <Preference
            android:title="Блоклист"
            android:key="block_list"
            android:summary="Список пользователей, которым запрещен доступ к Вашей странице"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/preference_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:title="Привязка к сервисам"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:title="ВКонтакте"
            android:key="vk"
            android:widgetLayout="@layout/preference_switch"
            app:iconSpaceReserved="false"/>
        <SwitchPreference
            android:title="Google"
            android:key="google"
            android:widgetLayout="@layout/preference_switch"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>
