<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="18dp"
    android:paddingBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">
    <TextView
        android:textSize="18sp"
        android:textColor="?attr/primaryTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_choose_quality"
        android:fontFamily="@font/roboto_medium"/>
    <com.swiftsoft.anixartd.utils.radiobutton.CustomRadioGroup
        android:orientation="vertical"
        android:id="@+id/qualities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <com.swiftsoft.anixartd.utils.radiobutton.types.OneFieldRadioButton
            android:id="@+id/itemQualityDefault"
            android:background="@null"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rbTitle="@string/quality_default"/>
        <com.swiftsoft.anixartd.utils.radiobutton.types.OneFieldRadioButton
            android:id="@+id/itemQualityLow"
            android:background="@null"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rbTitle="@string/quality_low"/>
        <com.swiftsoft.anixartd.utils.radiobutton.types.OneFieldRadioButton
            android:id="@+id/itemQualityMedium"
            android:background="@null"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rbTitle="@string/quality_medium"/>
        <com.swiftsoft.anixartd.utils.radiobutton.types.OneFieldRadioButton
            android:id="@+id/itemQualityHigh"
            android:background="@null"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rbTitle="@string/quality_high"/>
        <com.swiftsoft.anixartd.utils.radiobutton.types.OneFieldRadioButton
            android:id="@+id/itemQualityUltraHigh"
            android:background="@null"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rbTitle="@string/quality_ultra_high"/>
    </com.swiftsoft.anixartd.utils.radiobutton.CustomRadioGroup>
    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cbAskAlways"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-2dp"
            android:checked="true"
            android:text="@string/player_always_ask"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            android:gravity="center"
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_continue"
            android:layout_weight="1"
            style="@style/AnixButton.Outlined"/>
    </LinearLayout>
</LinearLayout>
